[gd_scene load_steps=8 format=2]

[ext_resource path="res://tempAssets/coin.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Coin.gd" type="Script" id=2]
[ext_resource path="res://src/Themes/new_basic_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/UI/dymek2.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 127.752

[sub_resource type="Animation" id=2]
resource_name = "Bouncing"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("coin:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.466516, 2.07053 ),
"update": 0,
"values": [ Vector2( 0, 10 ), Vector2( 0, -10 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fadeOut"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Coin" type="Area2D"]
position = Vector2( 0, 10 )
collision_layer = 4
script = ExtResource( 2 )

[node name="coin" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Bouncing"
anims/Bouncing = SubResource( 2 )
anims/fadeOut = SubResource( 3 )

[node name="dymek2" type="Sprite" parent="."]
position = Vector2( 34.1574, -168.064 )
texture = ExtResource( 4 )

[node name="InterractionInfo" type="Label" parent="dymek2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -653.38
margin_top = -490.687
margin_right = -385.38
margin_bottom = -443.687
theme = ExtResource( 3 )
text = "Press E to interract"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Coin_body_exited"]
